# vpadauk

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/blink/: blink.fw  main.rs
src/: isa.rs  lib.rs  mcu.rs
src/isa/: pdk13.rs
src/isa/pdk13/: bus.rs  ir.rs  limit.rs  opcode_stamp.rs  ops.rs  pdk_core.rs  regs.rs  translation.rs
src/isa/pdk13/test/: ir_generation.rs  ir_slot.rs  mock_bus.rs  mod.rs  pdk_core.rs  translation.rs
src/mcu/: host_adapter.rs  pms150c.rs
vpadauk-plotter/: Cargo.toml
vpadauk-plotter-cli/: Cargo.toml
vpadauk-plotter-cli/src/: main.rs
vpadauk-plotter/src/: lib.rs  plotting_host.rs
